--- a/desafios/d010/estilo/style.css
+++ b/desafios/d010/estilo/style.css
@@ -33,6 +33,10 @@ body {
     font-family: var(--fonte-padrao);
 }
 
+a.externo:after { /* para todo o link externo, depois dele foi colocado um emoji de cadeado, o \00A0 é para dar espaço */
+    content: '\00A0\1F517';
+}
+
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 150px;
@@ -45,7 +49,8 @@ header > h1 {
     font-family: var(--fonte-destaque); 
     margin-top: 30px;     
     font-size: 3em;
-    margin-bottom: 20px;   
+    font-weight: normal;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.723);
 }
 
@@ -57,6 +62,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    margin-bottom: 30px;
     padding-bottom: 30px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.329);
 }
@@ -68,7 +74,7 @@ nav {
 }
 
 nav a {
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     border-radius: 2px;
     text-decoration: none;
@@ -79,6 +85,7 @@ nav a {
 nav a:hover {
     background-color: var(--cor2);
     color: var(--cor5);
+    border-radius: 6px;
 }
 
 main {
@@ -94,24 +101,113 @@ main {
 }
 
 main h1 {
+    color: var(--cor5);
     font-family: var(--fonte-android);
+    font-weight: normal; /* tira o negrito do título, para ficar melhorar a leitura */
+    font-size: 1.8em; 
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;  
+    text-indent: 30px; /* Espaço entre o inicio do paragrafo e a margem */
+    line-height: 2em; /* Espaço entre as linhas */
+    font-size: 1em;
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 6px;
+}
+
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 6px;
+    border-radius: 6px; /* borda arredondada */ 
+}
+
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
 }
 
 main h2 {
-      font-family: var(--fonte-android);  
+    font-family: var(--fonte-android); 
+    color: var(--cor4); 
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
+    border-radius: 6px;
+    font-weight: normal; /* tira o negrito do título, para ficar melhorar a leitura */
 }
 
 main img {
     width: 100%;
 }
 
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px; /* para o background colar nas laterais */
+    padding: 20px;
+    padding-bottom: 57%;
+    position: relative
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
 main img.pequena {
-    width: 50%;
+    max-width: 350px;
     display: block;
     margin: auto;
+}
+
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+aside > h3 { /* O h3 que está dentro do aside apenas ele será modificado*/
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0 -10px; /* margem crescendo 10cm para fora*/
+    border-radius: 10px 10px 0px 0px; /* arredonda apenas na parte superior */
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.207);
+}
+
+aside > ul {
+    list-style-position: inside; /* os buckets ficam dentro da area aside */
+    list-style-type: '\2714\00A0\00A0'; /* Colocar o emoji de check, esse emoji foi retirado do site emojipedia, uma obs é que não é compatível com todos os navegadores. 00A0= o espaço entre o emoji do check q estava muito perto */
+    columns: 2; /* dividir o conteúdo em 2 colunas */
 }
 
 footer {
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
 }
