--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -58,6 +58,10 @@ section {
     font-size: 4vw; /* uma possível solução para ajustar as letras, quando for em desktop e você reduzir para uma tela mobile as letras se ajustam ao tamanho da tela */
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -66,17 +70,27 @@ section.normal {
 section.imagem {
     background-color: rgba(0, 0, 0, 0.442);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.485);
+    background-size: cover;
+    background-attachment: fixed; /* para fixar a imagem */
 }
 
 section.imagem > p {
     display: inline-block; /* caixa que se adapta ao tamanho do conteúdo  */
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.27);
+    background-color: rgba(0, 0, 0, 0.538);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.611);
 }
 
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
 
-
-
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+}
 
 footer {
     background-color: black;
