--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -2,6 +2,91 @@
 
 /* Todas as demais medias */
 
-@media print {
+/* Typical Device Breakpoints (de acordo com a W3C atualmente)
+Pequenas telas: até 600px
+Celular: 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+TV: acima de 1200px
+*/
+
+
+@media print { /* Impressão */
+    body {
+        background-image: url(../imagens/back-print.jpg);
+    }
+    
+    main {
+        width: 90vw;
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'Essa impressão foi feita através do site www.curso.com.br';
+        text-decoration: overline;
+    }
+
+    main h1 {
+        font-family: 'Courier New', Courier, monospace;
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+/* @media screen and (max-width: 600px){
     
 }
+
+@media screen and (min-width: 600px) and (max-width: 768px) {
+
+} 
+Vamos desconsiderar/ignorar as declarações acima, pois já foi feito essas configurações mobile no style css usando mobile first
+*/
+
+@media screen and (min-width: 768px) and (max-width:992px){ /* Tablet */
+    body {
+        background-image: url(../imagens/back-tablet.jpg)
+    }
+    
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px){ /* Desktop */
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+        
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 1200px) { /* Grandes telas */
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main {
+        width: 700px;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
+}
+
