--- a/exercicios/ex027/flex013-menu flexbox/style.css
+++ b/exercicios/ex027/flex013-menu flexbox/style.css
@@ -26,12 +26,13 @@ header {
 }
 
 header > h1 {
-    border: 1px dotted black;
+    /* border: 1px dotted black; */
     flex: 0 0 350px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.418);
 }
 
 header > nav {
-    border: 1px dotted black;
+    /* border: 1px dotted black; */
     
     display: flex;
     flex-flow: row wrap;
@@ -62,3 +63,12 @@ main {
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.464);
 }
 
+ul {
+    list-style-type: disc; 
+    margin-left: 30px;     
+    padding-left: 20px;   
+}
+
+li {
+    margin-bottom: 8px;    
+}
